# trust-dns

client/: Cargo.toml
client/src/client/: client_future.rs
resolver/: Cargo.toml
resolver/src/: config.rs  lib.rs  lookup_ip.rs  name_server_pool.rs  resolver.rs  resolver_future.rs
rustls/: Cargo.toml
