[package]
name = "trust-dns-resolver"
version = "0.1.0"
authors = ["Benjamin Fry <benjaminfry@me.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
TRust-DNS is a safe and secure DNS client with DNSec support. DNSSec
 with NSEC validation for negative records, is complete. The client supports
 dynamic DNS with SIG0 authenticated requests, implementing easy to use high level
 funtions. TRust-DNS is based on the Tokio and Futures libraries, which means
 it should be easily integrated into other software that also use those
 libraries.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/trust-dns"
homepage = "http://www.trust-dns.org/index.html"
repository = "https://github.com/bluejekyll/trust-dns"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "../README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["DNS", "BIND", "dig", "named", "dnssec"]
categories = ["network-programming"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT/Apache-2.0"

# custom build steps
build = "build.rs"

[badges]
travis-ci = { repository = "bluejekyll/trust-dns" }

[features]
default = ["openssl", "tls"]
tls = ["native-tls", "tokio-tls", "security-framework"]

# WARNING: there is a bug in the mutual tls auth code at the moment see issue #100
# mtls = ["tls"]

[lib]
name = "trust_dns_resolver"
path = "src/lib.rs"

[dependencies]
trust-dns = { version = "^0.10", path = "../client" }

[dev-dependencies]
openssl = "^0.9.7"
native-tls = "^0.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "^0.1.10", optional = true }

[target.'cfg(target_os = "macos")'.dev-dependencies]
security-framework = "^0.1.10"
